third_party/move/move-compiler-v2/tests/more-v1/parser/constant_public.exp

Diagnostics:
error: unsupported language construct
  ┌─ tests/more-v1/parser/constant_public.move:3:5
  │
3 │     public const Foo: u64 = 0;
  │     ^^^^^^ Move 2.5 language construct is not enabled: visibility modifier on constants

